    * more Blu-ray codec support with lavf
    * fix length in ASF/WMV files
    * support ISDB-Tb DVB streams

    Drivers:
    * Support for more formats in OpenGL video output drivers (different YUV
      subsampling, 16 bit per component)
    * Selectable YUV to RGB conversion standard for -vo gl
      (-vo gl:colorspace=...:levelconv=...)
    * -vo matrixview finally added

    Other:
    * -nosub option for disabling auto-selected subtitles
    * support for displaying subs in the terminal (FIXME)
    * support for subtitles with audio-only files
    * support for right-to-left languages with embedded subtitles
    * support for 8 channel audio
    * sync dvd:// and dvdnav:// features
    * support for MPEG-4 ASP in VDPAU video output (non B-frame only)
    * support for live and non-live DVB teletext with demuxer lavf
    * -name, -title and -use-filename-title options for MPlayer
    * support for stream handling via FFmpeg
      (use e.g. ffmpeg://http://example.com/test)
    * experimental support for external libass, configure with
      --disable-ass-internal
    * better support for 16-bit-per-component formats and formats
      with alpha channel.
    * better out-of-the-box support for compiling for ARM, IA64,
      MinGW32 and MinGW-w64, MinGW has ASLR enabled with recent
      enough binutils.

    MEncoder:
    * add -tsprog for demuxer lavf

  rc3: "BikeshedCounter" March 27, 2009
    Decoders:
    * support for X8 frames (fixes "J-type picture is not supported" for WMV2)
    * support for DTS WAV/DTS-CD passthrough by ad_hwac3
    * Apple's raw YUV2 in MOV
    * LATM over LOAS AAC decoding via internal libfaad2
    * video game codecs: BFI video, Playstation MDEC video, ADPCM XA audio,
      EA Maxis XA ADPCM audio, RL2 video, Beam Software SIFF video, V.Flash PTX video
    * AVOption support for libavcodec-based decoders
    * use lavc ADPCM codecs by default
    * support for progressive JPEG in ffmjpeg