@@ -2858,6 +2858,22 @@ Playing a file with \-v will show a list of available devices.
 .PD 1
 .
 .TP
+.B kai (OS/2 only)
+OS/2 KAI audio output driver
+.PD 0
+.RSs
+.IPs uniaud
+Force UNIAUD mode
+.IPs dart
+Force DART mode
+.IPs (no)share
+Open audio in shareable or exclusive mode.
+.IPs bufsize=<size>
+Set buffer size to <size> in samples (default: 2048).
+.RE
+.PD 1
+.
+.TP
 .B dart (OS/2 only)
 OS/2 DART audio output driver
 .PD 0
