@@ -47,6 +47,7 @@ extern const ao_functions_t audio_out_sun;
 extern const ao_functions_t audio_out_sgi;
 extern const ao_functions_t audio_out_win32;
 extern const ao_functions_t audio_out_dsound;
+extern const ao_functions_t audio_out_kai;
 extern const ao_functions_t audio_out_dart;
 extern const ao_functions_t audio_out_dxr2;
 extern const ao_functions_t audio_out_ivtv;
@@ -63,6 +64,9 @@ const ao_functions_t* const audio_out_drivers[] =
 #endif
 #ifdef CONFIG_WIN32WAVEOUT
         &audio_out_win32,
+#endif
+#ifdef CONFIG_KAI
+        &audio_out_kai,
 #endif
 #ifdef CONFIG_DART
         &audio_out_dart,
